# ParallelCompute

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/ecse420/parallelcompute/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MyVulkanCompute.cpp  MyVulkanCompute.h
app/src/main/java/com/ecse420/parallelcompute/: EGLContextManager.java  ImageCaptured.java  MainActivity.java  NativeVulkan.java  OpenGLHelper.java
app/src/main/java/com/ecse420/parallelcompute/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_image_captured.xml  activity_main.xml
app/src/main/res/raw/: blur.comp  blur_comp_spv  grayacale_spv  grayscale.comp
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/ecse420/parallelcompute/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
